platform/istio/manifests/authz/member/authorization-product.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-authenticated-access-product
  namespace: come2us
spec:
  selector:
    matchLabels:
      app: product-service
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
      to:
        - operation:
            methods: ["GET"]
            paths:
              - /reviews/me
        - operation:
            methods: ["POST"]
            paths:
              - /reviews
        - operation:
            methods: ["PATCH"]
            paths:
              - /reviews/{*}
